added comments and MD to cells

--- a/Music Analysis/01/start.ipynb
+++ b/Music Analysis/01/start.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Getting information about data: we can see the column, datatypes as well as counts_"
+    "### _Getting information about data: we can see the column, datatypes as well as counts_"
    ]
   },
   {
@@ -84,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Looking at the varioous descriptive statistics: average, max, min_"
+    "### _Looking at the varioous descriptive statistics: average, max, min_"
    ]
   },
   {
@@ -382,7 +382,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Getting information about data: we can see there are some null values in name column_"
+    "### _Getting information about data: we can see there are some null values in name column_"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Printing first 5 rows to see how the data looks like_"
+    "### _Printing first 5 rows to see how the data looks like_"
    ]
   },
   {
@@ -769,7 +769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Trending duration over the years. It can be observed that from around 2012 duration of music has genreally been decreasing_"
+    "### _Trending duration over the years. It can be observed that from around 2012 duration of music has genreally been decreasing_"
    ]
   },
   {
@@ -801,7 +801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Which month has the most song? From the graph below it can be seen that the month with most songs is the 6th Month which is **June**_"
+    "### _Which month has the most song? From the graph below it can be seen that the month with most songs is the 6th Month which is **June**_"
    ]
   },
   {
@@ -832,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Which day has the most songs? It can be seen that 1st day of every month seems to be the most popular._"
+    "### _Which day has the most songs? It can be seen that 1st day of every month seems to be the most popular._"
    ]
   },
   {
@@ -865,7 +865,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _From trend below we can see that although 1st day of the month is the time most songs are released, popularity is heavily affected probably due to the number of available options listners have. So it might be better to release the song on the 26th of each month_"
+    "### _From trend below we can see that although 1st day of the month is the time most songs are released, popularity is heavily affected probably due to the number of available options listners have. So it might be better to release the song on the 26th of each month_"
    ]
   },
   {
@@ -909,7 +909,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Which keys are the most popular songs using ? From the data it can be seen that Key A# is the key most popular songs use, then followed by D#_"
+    "### _Which keys are the most popular songs using ? From the data it can be seen that Key A# is the key most popular songs use, then followed by D#_"
    ]
   },
   {
@@ -989,7 +989,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _It can be observed that song with highest popularity score is D#_"
+    "### _It can be observed that song with highest popularity score is D#_"
    ]
   },
   {
@@ -1089,7 +1089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _In the image above we can see there is a strong correlation between energy and loudness as well as enegry and popularity_"
+    "### _In the image above we can see there is a strong correlation between energy and loudness as well as enegry and popularity_"
    ]
   },
   {
@@ -1180,7 +1180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Very weak relationship between Acousticness  and Energy_"
+    "### _Very weak relationship between Acousticness  and Energy_"
    ]
   },
   {
@@ -1216,45 +1216,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 232725 entries, 0 to 232724\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column            Non-Null Count   Dtype  \n",
-      "---  ------            --------------   -----  \n",
-      " 0   genre             232725 non-null  object \n",
-      " 1   artist_name       232725 non-null  object \n",
-      " 2   track_name        232724 non-null  object \n",
-      " 3   track_id          232725 non-null  object \n",
-      " 4   popularity        232725 non-null  int64  \n",
-      " 5   acousticness      232725 non-null  float64\n",
-      " 6   danceability      232725 non-null  float64\n",
-      " 7   duration_ms       232725 non-null  int64  \n",
-      " 8   energy            232725 non-null  float64\n",
-      " 9   instrumentalness  232725 non-null  float64\n",
-      " 10  key               232725 non-null  object \n",
-      " 11  liveness          232725 non-null  float64\n",
-      " 12  loudness          232725 non-null  float64\n",
-      " 13  mode              232725 non-null  object \n",
-      " 14  speechiness       232725 non-null  float64\n",
-      " 15  tempo             232725 non-null  float64\n",
-      " 16  time_signature    232725 non-null  object \n",
-      " 17  valence           232725 non-null  float64\n",
-      "dtypes: float64(9), int64(2), object(7)\n",
-      "memory usage: 32.0+ MB\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 222,
    "metadata": {},
    "outputs": [
@@ -1280,7 +1241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####  _Image above shows Major mode of the song is highest_"
+    "###  _Image above shows Major mode of the song is highest_"
    ]
   },
   {
@@ -1312,7 +1273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Which genre is the most popular? We see the most popular genre is Comedy and least popular genre is the A Capella_"
+    "### _Which genre is the most popular? We see the most popular genre is Comedy and least popular genre is the A Capella_"
    ]
   }
  ],
